[gd_scene load_steps=18 format=3 uid="uid://dvfrickhtm6f7"]

[ext_resource type="Script" path="res://Scripts/collectable.gd" id="1_g2kfp"]
[ext_resource type="Texture2D" uid="uid://yd0it0cphxaq" path="res://Sprites/Golden_Alga.png" id="2_18sp6"]
[ext_resource type="AudioStream" uid="uid://20ivefg555mj" path="res://SFX/AlgaeAura.wav" id="3_ww4q0"]
[ext_resource type="AudioStream" uid="uid://cvfut3el4b7t2" path="res://SFX/Gold1.wav" id="4_btch4"]
[ext_resource type="AudioStream" uid="uid://cjl1u7yexg582" path="res://SFX/Gold2.wav" id="5_m75dk"]
[ext_resource type="AudioStream" uid="uid://cnc04eu0sfsqq" path="res://SFX/Gold3.wav" id="6_yxgxw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uy1l0"]
atlas = ExtResource("2_18sp6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf7nc"]
atlas = ExtResource("2_18sp6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l14y6"]
atlas = ExtResource("2_18sp6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqlco"]
atlas = ExtResource("2_18sp6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w3rp"]
atlas = ExtResource("2_18sp6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt72v"]
atlas = ExtResource("2_18sp6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh8y4"]
atlas = ExtResource("2_18sp6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y564"]
atlas = ExtResource("2_18sp6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1yg2o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy1l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf7nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l14y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqlco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w3rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt72v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh8y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y564")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilnqw"]
size = Vector2(52, 52)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_v4yku"]
streams_count = 3
random_pitch = 1.0
stream_0/stream = ExtResource("4_btch4")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_m75dk")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_yxgxw")
stream_2/weight = 1.0

[node name="Collectable" type="Area2D"]
script = ExtResource("1_g2kfp")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_1yg2o")
autoplay = "default"
frame_progress = 0.126175

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ilnqw")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ww4q0")
volume_db = 5.0
bus = &"SFX"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_v4yku")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
